--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
-<title>Mahira | VCard | CV HTML Template</title>
+<title>xyzhai23625</title>
 <!-- Stylesheets -->
 <link href="css/bootstrap.css" rel="stylesheet">
 <link href="css/style.css" rel="stylesheet">
@@ -75,13 +75,13 @@
                     <div class="author-info" style="background-image:url(images/background/3.jpg)">
                         <div class="image"><img src="images/resource/user.png" alt=""></div>
                         <div class="author">
-                            <h3>Mahira Rashid</h3>
+                            <h3>Xiang-Yu Zhai</h3>
                             <div class="designation">
                                 Hi i’m
                                 <div class="typing-title">
-                                    <p>a <strong>web developer.</strong></p>
-                                    <p>a <strong>web Designer.</strong></p>
-                                    <p>a <strong>photographer.</strong></p>
+                                    <p>a <strong>a tiny person.</strong></p>
+                                    <p>a <strong>an optimist.</strong></p>
+                                    <p>a <strong>an artist.</strong></p>
                                 </div>
                                 <span class="typed-title"></span>
                             </div>
@@ -115,18 +115,18 @@
                             <div class="card-inner wow fadeInUp" data-wow-duration="2s">
                                 <div class="image"><img src="images/resource/user.png" alt=""></div>
                                 <div class="author">
-                                    <h3>Mahira Rashid</h3>
+                                    <h3>Xiang-Yu Zhai</h3>
                                     <div class="designation">
                                         Hi i’m
                                         <div class="typing-title">
-                                            <p>a <strong>web developer.</strong></p>
-                                            <p>a <strong>web Designer.</strong></p>
-                                            <p>a <strong>photographer.</strong></p>
+                                            <p>a <strong>a tiny person.</strong></p>
+                                            <p>a <strong>an optimist.</strong></p>
+                                            <p>a <strong>an artist.</strong></p>
                                         </div>
                                         <span class="typed-title"></span>
                                     </div>
                                 </div>
-                                <div class="text">Dolor sit amet consectetur elit sed do eiusmod tempor incididunt labore dolore mega aliqua enim minim veniam.</div>
+                                <div class="text">Take a desperate risk, survive or soar.</div>
                                 <div class="link-btn">
                                     <a href="#" class="theme-btn btn-style-one">Download CV</a>
                                     <a href="#" class="theme-btn btn-style-two">Hire Me</a>
