--- a/index.html
+++ b/index.html
@@ -147,19 +147,19 @@
                         <div class="card-about card-item" id="about" style="background-image:url(images/background/2.jpg)">
                             <div class="card-inner">
                                 <h4 class="title">About Me</h4>
-                                <div class="text">Dolor sit amet consectetur elit sed do eiusmod tempor incididunt labore dolore mega aliqua enim ad minim veniam quis nostrud exercitation ullamco laboris nisi ut aliquip commodo reprehenderit.</div>
+                                <div class="text">In the face of challenges, daring to take desperate gambles, embracing the possibility of soaring to greater heights.</div>
                                 <div class="info-list">
                                     <div class="row">
                                         <div class="col-md-6">
                                             <ul class="list-style-one">
-                                                <li><strong>Name:</strong>  Mahira Rashid</li>
-                                                <li><strong>Phone:</strong>  254 - 2563 - 2154</li>
-                                                <li><strong>Address:</strong>  San francisco, USA</li>
+                                                <li><strong>Name:</strong>  Zhai XY</li>
+                                                <li><strong>Phone:</strong>  </li>
+                                                <li><strong>Address:</strong>  Inner Mongolia, China</li>
                                             </ul>
                                         </div>
                                         <div class="col-md-6">
                                             <ul class="list-style-one">
-                                                <li><strong>Email:</strong>  mahirarashid@gmail.com</li>
+                                                <li><strong>Email:</strong>  xyzhai23625@gmail.com</li>
                                                 <li><strong>Freelance:</strong>  Available</li>
                                             </ul>
                                         </div>
