--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                                 </div>
                                 <div class="text">Take a desperate risk, survive or soar.</div>
                                 <div class="link-btn">
-                                    <a href="#" class="theme-btn btn-style-one">Download CV</a>
+                                    <a href="http://www.17sucai.com/" class="theme-btn btn-style-one">Download CV</a>
                                     <a href="#" class="theme-btn btn-style-two">Hire Me</a>
                                 </div>
                                 <ul class="social-icon-two">
