--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@
                             <div class="designation">
                                 Hi i’m
                                 <div class="typing-title">
-                                    <p>a <strong>a tiny person.</strong></p>
-                                    <p>a <strong>an optimist.</strong></p>
-                                    <p>a <strong>an artist.</strong></p>
+                                    <p> <strong>a tiny person.</strong></p>
+                                    <p> <strong>an optimist.</strong></p>
+                                    <p> <strong>an artist.</strong></p>
                                 </div>
                                 <span class="typed-title"></span>
                             </div>
@@ -119,9 +119,9 @@
                                     <div class="designation">
                                         Hi i’m
                                         <div class="typing-title">
-                                            <p>a <strong>a tiny person.</strong></p>
-                                            <p>a <strong>an optimist.</strong></p>
-                                            <p>a <strong>an artist.</strong></p>
+                                            <p> <strong>a tiny person.</strong></p>
+                                            <p> <strong>an optimist.</strong></p>
+                                            <p> <strong>an artist.</strong></p>
                                         </div>
                                         <span class="typed-title"></span>
                                     </div>
