--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                                         <span class="typed-title"></span>
                                     </div>
                                 </div>
-                                <div class="text">Take a desperate risk, survive or soar.</div>
+                                <div class="text">Take a desperate risk, die or soar.</div>
                                 <div class="link-btn">
                                     <a href="http://www.17sucai.com/" class="theme-btn btn-style-one">Download CV</a>
                                     <a href="#" class="theme-btn btn-style-two">Hire Me</a>
